# netmonitor

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: app.h  common.h  network_monitor.h  system_monitor.h  system_state.h
scripts/: build.sh  clean.sh  dev.sh  run.sh
src/: app.c  main.c  network_monitor.c  system_monitor.c  system_state.c
src/app/: app.c  app.h
src/cpu/: cpu_monitor.c  cpu_monitor.h
src/network/: network_info.c  network_info.h  network_monitor.c  network_monitor.h
src/system/: system_state.c
src/tcp/: tcp_monitor.c  tcp_monitor.h  tcp_monitor_helpers.c  tcp_monitor_helpers.h
